# crypto-bot

./: Dockerfile  Makefile  README.md  app.py  coins.db  database.py  docker-compose.yml  pyproject.toml
models/: coin.py  trade.py
services/: top_coins_service.py  trade_coin_service.py  utility.py
storage/logs/: .gitignore
validators/: coin_schema.py
